force-app/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Number_of_Volunteering_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Volunteering_Days__c</fullName>
    <description>Field being used in Process Builder for sending email notifications depending on number of days. Not visible on page layouts.</description>
    <formula>GW_Volunteers__End_Date__c - GW_Volunteers__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Volunteering Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>