force-app/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Site_Source__c.field-meta.xml
<CustomField>
    <fullName>Site_Source__c</fullName>
    <description>This field is to be used by automations and is not visible to users on the page layout.
The picklist value selected will update the Contact record with the equivalent &#39;Site&#39; checkbox, which in turn will allow the contact and volunteer hour record to be shared.
**NOTE: If a new value is added to this list, the following will also be required:
1. Create equivalent checkbox in Contact&amp;Volunteer object (see similar checkboxes)
2. Update the Contact Share by Site sharing rule</description>
    <label>Site Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Calais</fullName>
            </value>
            <value>
                <fullName>Greece</fullName>
            </value>
            <value>
                <fullName>Serbia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>